# youtube-summariser

./: .env.example  .gitignore  Cargo.toml  LEARNING.md  LICENSE  README.md
src/: main.rs  openai.rs  transcript.rs  utils.rs
