[package]
name = "youtube-summariser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
async-openai = "0.14"
url = "2.4"
regex = "1.9"
chrono = "0.4"
dirs = "5.0"
